--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <body>
         <div class="nav_bar">
             <ul class="nav_list">
-                <a href=home.html style="color: rgb(255, 255, 255); font-size: 23px; text-decoration: none;"><li style="cursor:pointer">HOME</li></a>
+                <a href=Welcom.html style="color: rgb(255, 255, 255); font-size: 23px; text-decoration: none;"><li style="cursor:pointer">WELCOME</li></a>
                 <li style="cursor:pointer">DEVELOPERS</li>
                 <li><a href=cart.html style="color: rgb(255, 255, 255); font-size: 23px; text-decoration: none;">CART</a></li>
                 <a href=Login.html style="color: rgb(255, 255, 255); font-size: 23px; text-decoration: none;"><li id="loginNamehh" style="cursor:pointer"></li></a>
