--- a/Register.html
+++ b/Register.html
@@ -114,7 +114,7 @@
    <input type="submit" name="" placeholder="Register">
    <p class="error" style="color: pink;text-align: center"></p>
      	<p><a href="Login.html">Sign in instead</a></p>
-	
+       <p class="error" style="color:red;text-align: center"></p>
   </div>
   
    </form>
